                                 Muldis::D
                                  Changes
---------------------------------------------------------------------------

2010-10-xx

    * Muldis::D version 0.142.0 is released on CPAN as
    Muldis-D-0.142.0.tar.gz.

    * (Basics.pod, Types_Catalog.pod, PTMD_STD.pod, HDMD_Perl[6|5]_STD.pod)
    Simplified the low-level type system such that "String" values are now
    internally repertoire-agnostic, and they now rely on an external
    context for the interpretation of their elements.  A "String" is now
    primarily a "List" of 2 elements rather than 3; the middle "element
    repertoire" element has been removed.  In Basics.pod, updated the "Low
    Level Type System" pod sub-section with a new description for "String".
    In Types_Catalog.pod, updated the descriptions of the 4 "String" proper
    subtypes.  In all 3 STD.pod, updated the "List" literal code examples.

    * (Types.pod, Types_Catalog.pod, Basics.pod)  Renamed the 3 core types
    "Minimal_Text", "MCPString", "Unicode_Text to "CoreText", "CCPString",
    "Text.Unicode" respectively.
    Also redefined the "CoreText" type to match ASCII rather than Base64.

    * (Types_Catalog.pod)  Updated the "Package" catalog type to add a
    constraint that all of the "Name" and "Comment" typed components of a
    "Package" value, respectively, must all have text of th same text type.

    * (Types.pod)  Added new type "Text.ASCII" which is a proper
    subtype of "Text.Unicode" and so the two are comparable, while
    "CoreText", whose repertoire Text.ASCII shares, isn't comparable.  So
    users should default to using ASCII over Core when former is supported.

    * (Types.pod)  Added new type "Text.Latin1" which is a proper
    subtype of "Text.Unicode" as per "Text.ASCII".
    TODO: ADD A BUNCH MORE TYPES LIKE THIS, WHEN ALL NON-CORE PUT IN EXT.

    * (PTMD_STD.pod)  In a partial reversal of one aspect of release