@@ -9,7 +9,7 @@ Muldis D generic stringy operators
 
 =head1 VERSION
 
-This document is Muldis::D::Core::Stringy version 0.141.0.
+This document is Muldis::D::Core::Stringy version 0.142.0.
 
 =head1 PREFACE
 
