@@ -9,7 +9,7 @@ External resources that you really ought to look at
 
 =head1 VERSION
 
-This document is Muldis::D::SeeAlso version 0.141.0.
+This document is Muldis::D::SeeAlso version 0.142.0.
 
 =head1 DESCRIPTION
 
