@@ -2,10 +2,14 @@
                                   Changes
 ---------------------------------------------------------------------------
 
-2010-10-xx
+2010-10-16
 
     * Muldis::D version 0.142.0 is released on CPAN as
     Muldis-D-0.142.0.tar.gz.
+
+    * This release is another snapshot in the process of externalizing the
+    complexities of character strings, particularly those brought on by the
+    likes of Unicode, from the core.  A larger one will follow soon.
 
     * (Basics.pod, Types_Catalog.pod, PTMD_STD.pod, HDMD_Perl[6|5]_STD.pod)
     Simplified the low-level type system such that "String" values are now
@@ -33,7 +37,6 @@
 
     * (Types.pod)  Added new type "Text.Latin1" which is a proper
     subtype of "Text.Unicode" as per "Text.ASCII".
-    TODO: ADD A BUNCH MORE TYPES LIKE THIS, WHEN ALL NON-CORE PUT IN EXT.
 
     * (PTMD_STD.pod)  In a partial reversal of one aspect of release
     0.49.0, updated the PTMD_STD grammar for all comma-separated lists so
